--- a/titanic-eda-modelling.ipynb
+++ b/titanic-eda-modelling.ipynb
@@ -735,10 +735,7 @@
    "source": [
     "### 1) Logistic Regression model\n",
     "\n",
-    "- description high level w figs (read articles / watch vids)\n",
-    "- pros and cons in general and for this dataset\n",
-    "\n",
-    "[writeup]\n",
+    "- simplest classification algo, used as baseline good starting point. fits a linear equation to input features, and then passes thru sigmoid fxn maping to 1 and 0 representing like predicted true outcome or false (in this case survival or death). strengths are that it is [easier???] to interpret - see how each feature coefficients corresponding to like strength on outcome correlation? however assumes linear relationship does not aatpure feature interactions or non linear patterns well. although there is some multicollinearity betweenfeatures(?) like pclass or fare, log reg does surprisngly well (accuracy xxx%) likely bc lots of vars map linearly with survival (e.g. sex, pclass/fare)\n",
     "\n",
     "### 2) Decision Tree model\n",
     "\n",
