--- a/titanic-eda-modelling.ipynb
+++ b/titanic-eda-modelling.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": null,
    "id": "1e36d486",
    "metadata": {},
    "outputs": [],
@@ -1820,7 +1820,7 @@
     "submission = pd.read_csv('titanic/gender_submission.csv')\n",
     "submission['Survived'] = y_pred # answer to 'Can we accurately predict survival with a simple model?' ys got to 77.x%!\n",
     "\n",
-    "submission.to_csv('submissions/final_test.csv', index=None)"
+    "submission.to_csv('submissions/final_version.csv', index=None)"
    ]
   },
   {
