--- a/titanic-eda-modelling.ipynb
+++ b/titanic-eda-modelling.ipynb
@@ -14,9 +14,9 @@
     "- Generating final predictions for submission\n",
     "\n",
     "### Guiding Questions\n",
-    "- Which features are correlated with survival?\n",
-    "- Can we accurately predict survival with a simple model?\n",
-    "- Which model performs best on this dataset?"
+    "- **Which features are correlated with survival?**\n",
+    "- **Can we accurately predict survival with a simple model?**\n",
+    "- **Which model performs best on this dataset?**"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "id": "9130df2e",
    "metadata": {},
    "source": [
-    "1. Import Statements"
+    "### Import Statements"
    ]
   },
   {
@@ -1277,7 +1277,7 @@
    "id": "9fbfe7da",
    "metadata": {},
    "source": [
-    "### Model Selection\n",
+    "## Model Selection\n",
     "\n",
     "- 8 models: Logistic Regression, Decision Tree, Random Forest, KNN, Naive Bayes, SVM, Gradient Boosting, Perceptron\n",
     "- Compare cross-validation scores to pick a best model and interpret"
@@ -1505,7 +1505,7 @@
    "id": "f69074a5",
    "metadata": {},
    "source": [
-    "### Feature Importance\n",
+    "## Feature Importance\n",
     "\n",
     "Sex was by far the strongest survival predictor aboard the Titanic — no surprise, given the general \"women and children first\" policy. [(Fun fact: this wasn’t a consistent norm across shipwrecks; in most historical disasters, survival favored men and especially crew. Titanic stands out as a rare case where this idea was partially enforced.)](https://www.cbsnews.com/news/women-and-children-first-just-a-myth-researchers-say/)\n",
     "\n",
@@ -1517,7 +1517,7 @@
     "features like **port of embarkation (Embarked_C and Embarked_S)** or Parch contributed very little to the model.\n",
     "\n",
     "\n",
-    "### Final Thoughts & What I Learned\n",
+    "## Final Thoughts & What I Learned\n",
     "Even though the Titanic dataset is a very commonly used dataset for initial projects, it was so helpful to walk through the full data science pipeline myself — from cleaning raw data to evaluating model performance, helping me build my skills, confidence, and curiosity.\n",
     "\n",
     "Some things I really enjoyed:\n",
@@ -1539,7 +1539,7 @@
    "id": "5a44ce6e",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "- [Titanic - Machine Learning from Disaster (Kaggle)](https://www.kaggle.com/competitions/titanic/data)\n",
     "- [Wikipedia: RMS Titanic](https://en.wikipedia.org/wiki/Titanic)\n",
     "- [YouTube: Titanic EDA Walkthrough](https://www.youtube.com/watch?v=cWf08xuSqdU&ab_channel=DataGeekismyname) – helpful data cleaning & prep tips\n",
